Fix: Code readability and fix date input on register screen

--- a/website/src/css/screen/register-screen.css
+++ b/website/src/css/screen/register-screen.css
@@ -79,3 +79,7 @@ body {
   pointer-events: none;
   color: #6c757d;
 }
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none !important;
+}
